[gd_scene load_steps=19 format=2]

[ext_resource path="res://bg2.webp" type="Texture" id=1]
[ext_resource path="res://versus-vs-banner-with-blue-red-light-effect_1017-26143.webp" type="Texture" id=2]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Skript8.gd" type="Script" id=4]
[ext_resource path="res://Kids Playing.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 3
outline_color = Color( 0.984314, 0.0313726, 0.0745098, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 35
font_data = ExtResource( 3 )

[node name="Node" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -6.0
margin_top = 7.0
margin_right = 1018.0
margin_bottom = 607.0
texture = ExtResource( 1 )

[node name="PEW_PEW" type="RichTextLabel" parent="TextureRect"]
margin_left = 65.0
margin_top = 27.0
margin_right = 407.0
margin_bottom = 73.0
custom_fonts/normal_font = SubResource( 1 )
text = "PEW PEW"

[node name="KUULID" type="RichTextLabel" parent="TextureRect"]
margin_left = 46.0
margin_top = 531.0
margin_right = 373.0
margin_bottom = 580.0
custom_colors/default_color = Color( 0.101961, 0.87451, 0.0705882, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "KUULID: 0"

[node name="GAME_OVER" type="RichTextLabel" parent="TextureRect"]
margin_left = 317.0
margin_top = 219.0
margin_right = 692.0
margin_bottom = 320.0
custom_fonts/normal_font = SubResource( 3 )
text = "GAME OVER"

[node name="TAPSUS" type="RichTextLabel" parent="TextureRect"]
margin_left = 707.0
margin_top = 24.0
margin_right = 923.0
margin_bottom = 71.0
custom_fonts/normal_font = SubResource( 4 )
text = "TÄPSUS: 0/0"

[node name="ELUD" type="RichTextLabel" parent="TextureRect"]
margin_left = 758.0
margin_top = 542.0
margin_right = 939.0
margin_bottom = 592.0
custom_colors/default_color = Color( 0.952941, 0.0470588, 0.0470588, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "ELUD: 100"

[node name="Node" type="Node" parent="."]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Node"]
margin_right = 1025.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true

[node name="Voidud" type="RichTextLabel" parent="Node/TextureRect"]
margin_left = 32.0
margin_top = 512.0
margin_right = 212.0
margin_bottom = 556.0
custom_fonts/normal_font = SubResource( 6 )
text = "Võidud : 0"

[node name="Kaotused" type="RichTextLabel" parent="Node/TextureRect"]
margin_left = 759.0
margin_top = 513.0
margin_right = 974.0
margin_bottom = 558.0
custom_fonts/normal_font = SubResource( 7 )
text = "Kaotused : 0"

[node name="Valik1" type="RichTextLabel" parent="Node/TextureRect"]
margin_left = 125.0
margin_top = 212.0
margin_right = 354.0
margin_bottom = 307.0
custom_fonts/normal_font = SubResource( 8 )
text = "VALIK"

[node name="Valik2" type="RichTextLabel" parent="Node/TextureRect"]
margin_left = 704.0
margin_top = 321.0
margin_right = 933.0
margin_bottom = 416.0
custom_fonts/normal_font = SubResource( 8 )
text = "VALIK"

[node name="Tulemus" type="RichTextLabel" parent="Node/TextureRect"]
margin_left = 392.0
margin_top = 374.0
margin_right = 574.0
margin_bottom = 484.0
custom_fonts/normal_font = SubResource( 9 )
text = "Tulemus"

[node name="Kivi" type="Button" parent="Node"]
margin_left = 55.0
margin_top = 28.0
margin_right = 167.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 10 )
text = "Kivi"

[node name="Paber" type="Button" parent="Node"]
margin_left = 198.0
margin_top = 29.0
margin_right = 315.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 11 )
text = "Paber"

[node name="Kaarid" type="Button" parent="Node"]
margin_left = 357.0
margin_top = 31.0
margin_right = 464.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 12 )
text = "Käärid"

[node name="Uus_mang" type="Button" parent="Node"]
margin_left = 394.0
margin_top = 500.0
margin_right = 539.0
margin_bottom = 559.0
custom_fonts/font = SubResource( 13 )
text = "Uus mäng"

[node name="Muusika" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource( 5 )

[connection signal="pressed" from="Node/Kivi" to="Node" method="_on_Kivi_pressed"]
[connection signal="pressed" from="Node/Paber" to="Node" method="_on_Paber_pressed"]
[connection signal="pressed" from="Node/Kaarid" to="Node" method="_on_Kaarid_pressed"]
[connection signal="pressed" from="Node/Uus_mang" to="Node" method="_on_Uus_mang_pressed"]
[connection signal="finished" from="Node/Muusika" to="Node" method="_on_Muusika_finished"]
[connection signal="ready" from="Node/Muusika" to="Node" method="_on_AudioStreamPlayer_ready"]
